# FastAPI_microservice_template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 910af5422e1f_add_oauth_fields_to_users_table.py  a0c447ca32ed_create_users_table.py
app/: config.py  main.py  worker.py
app/application/services/: user_service.py
app/domain/entities/: base.py  user.py
app/domain/events/: base.py  users.py
app/domain/repositories/: users.py
app/infrastructure/: logging.py
app/infrastructure/auth/: jwt.py
app/infrastructure/auth/providers/: base.py  google.py  provider_factory.py
app/infrastructure/cache/protocol/: cache.py
app/infrastructure/cache/redis/: cache.py  factories.py
app/infrastructure/database/: connection.py  dependencies.py
app/infrastructure/message_brokers/: exception.py
app/infrastructure/message_brokers/kafka/: consumer.py  dependencies.py  factories.py  publisher.py
app/infrastructure/message_brokers/protocols/: consumer.py  publisher.py
app/infrastructure/persistence/: cached_user_repository.py
app/infrastructure/persistence/models/: base_model.py  user.py
app/infrastructure/persistence/sqlalchemy/: user_repository.py
app/presentation/: dependencies.py  event_dispatcher.py
app/presentation/handlers/: __init__.py  users.py
app/presentation/routers/: auth.py  demo.py  users.py
app/presentation/schemas/: auth.py  user.py
tests/: conftest.py
tests/app/application/services/: test_user_service.py
tests/app/domain/entities/: test_user.py
tests/integration/: test_api.py  test_user_repository.py
tests/unit/app/application/services/: test_user_service.py
tests/unit/app/infrastructure/auth/: test_jwt.py
