[project]
name = "microservice-template"
version = "0.1.0"
description = "Шаблон для создания микросервисов на FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "redis[hiredis]>=7.4.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.14",
    "pre-commit>=4.6.0",
    "bandit>=1.9.4",
    "pytest-asyncio>=1.4.0",
    "pytest>=9.0.3",
    "faker>=40.21.0",
    "aiosqlite>=0.22.1",
]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = ["venv", ".venv", "alembic", "docker", ".git", "__pycache__",]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ASYNC",# asyncio
    "RUF",  # ruff-specific
]
ignore = ["E203", "E266", "E501", "B008", "ASYNC110", "RUF002"]

[tool.ruff.lint.isort]
force-single-line = false
force-sort-within-sections = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
exclude = [
    '.venv',
    'venv',
    '__pycache__',
    'alembic/',
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
ignore_missing_imports = true
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
]
